--- a/views/home.ejs
+++ b/views/home.ejs
@@ -72,8 +72,8 @@
                         <div class="card-image">
                             <img src="/static/img/login.png" alt="" class="responsive">
                         </div>
-                        <div class = "card-content">
-                            This is for the employees to login and add couriers. They can update also update the packages and track them.
+                        <div class = "card-content" style = "text-align: justify;">
+                            This is for the employees to login and add couriers. They can also update the packages and track them.
                         </div>
                         <div class="card-action">
                             <a href="/auth/login" class = "blue-text">Employee Login</a>
@@ -85,7 +85,7 @@
                     <div class="card-image">
                         <img src="/static/img/track.png" alt="" class="responsive">
                     </div>
-                    <div class = "card-content">
+                    <div class = "card-content" style = "text-align: justify;">
                         This is for the users who have courierd. They can track their package and get to know where it is.
                     </div>
                     <div class="card-action">
@@ -123,15 +123,15 @@
                    <div class="col s12 m3 ">
                             
                                      <div class="row"><br>
-                                            <center><h5> Canada Office address</h5>
+                                            <center><h5> BANGALORE OFFICE</h5>
                                             L-Courier <br>
                                              348, Lumsden avenue,<br>
-                                            Toronto, M4C2L3, CANADA<br>
+                                            Toronto, M4C2L3, Bangalore<br>
                                         </center>
                                     </div>
                                     <div class="row">
                                                     <br>
-                                                    <center><h5>Email</h5>
+                                                    <center><h5>EMAIL</h5>
                                              support@lcourier.com</center>
                                 
                                     </div>
