--- a/views/updateCourier.ejs
+++ b/views/updateCourier.ejs
@@ -25,12 +25,13 @@
             text-align: center;
             border-radius: 50px;
             margin-top: 25px;
-            padding-bottom: 30px;
+            margin-bottom: 20px;
+            padding: 10px;
         }
 
-        video {
-            margin-top: 10px;
-        }
+        /* video {
+            margin-top: 20px;
+        } */
 
         .row {
             margin-bottom: 0;
@@ -42,7 +43,8 @@
 
         @media (max-width: 480px) {
             #track-contianer {
-                padding: 0 20px;
+                padding: 0;
+                
             }
         }
   </style>
@@ -56,7 +58,7 @@
 
     <div class = "container" id = "track-container">
         <video id="preview"></video>
-        <div class="row">
+        <!-- <div class="row">
             <form class="col s12">
                 <div class="row">
                 <div class="input-field col offset-m4 s12 m4">
@@ -64,7 +66,7 @@
                 </div>
                 </div>
             </form>
-        </div>
+        </div> -->
     </div>
 
     <script src="/static/jquery.js"></script>
@@ -92,7 +94,7 @@
         }
         let tid = "";
         scanner.addListener('scan', function(content) {
-            document.getElementById("trackId").value = content;
+            // document.getElementById("trackId").value = content;
             if(tid !== content){
                 tid = content;
                 let trackIdData = { trackId: content };
