admin password is not encrypted

--- a/views/addCourier.ejs
+++ b/views/addCourier.ejs
@@ -82,11 +82,11 @@
                 
                 <div class="input-field col s12 m6">
                     <input id="weight" name = "weight" type="text" class="validate" required>
-                    <label for="weigt">WEIGHT (Unit: Kg)</ltabel>
+                    <label for="weigt">WEIGHT (Unit: Kilograms)</ltabel>
                 </div>
                   <div class="input-field col s12 m6">
                     <input id="size" name = "size" type="text" class="validate" required>
-                    <label for="size">SIZE (Units: meter, Format: w*h)</label>
+                    <label for="size">SIZE (Units: centimeters, Format: w*h)</label>
                 </div>
                 <div class="input-field offset-l3 offset-m3 col s12 m6">
                     <select name = "payment" required>
