--- a/views/home.ejs
+++ b/views/home.ejs
@@ -89,7 +89,7 @@
                         This is for the users who have courierd. They can track their package and get to know where it is.
                     </div>
                     <div class="card-action">
-                        <a href="/auth/track" class = "blue-text">Track Shipment</a>
+                        <a href="/track/getTrackId" class = "blue-text">Track Shipment</a>
                     </div>
                 </div>
             </div>
