--- a/views/pdfGen.ejs
+++ b/views/pdfGen.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Profile</title>
+    <title>L-Courier</title>
     <link rel="stylesheet" href="/static/materialize/css/materialize.min.css">
     <link href="/static/fontawesome-free-5.9.0-web/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/add-styles.css">
