--- a/views/updateCourier.ejs
+++ b/views/updateCourier.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Instascan</title>
+        <title>L-Courier</title>
         <link rel="stylesheet" href="/static/materialize/css/materialize.min.css">
         <link href="/static/fontawesome-free-5.9.0-web/css/all.css" rel="stylesheet">
         <script type="text/javascript" src="/static/instascan.min.js" ></script>
